Alt to drag textareas and wolfram fix

--- a/index.html
+++ b/index.html
@@ -327,6 +327,10 @@
                                 <td>Creates a text node</td>
                             </tr>
                             <tr>
+                                <td><strong>DOUBLE CLICK</strong></td>
+                                <td>'Anchor' a window in place.</td>
+                            </tr>
+                            <tr>
                                 <td><strong>SHIFT (hold)</strong></td>
                                 <td>Freeze Windows</td>
                             </tr>
@@ -335,20 +339,20 @@
                                 <td>Rotate the view.</td>
                             </tr>
                             <tr>
-                                <td><strong>ALT/Option + CLICK</strong></td>
-                                <td>Selects multiple nodes. Allows for multiple nodes to be re-scaled</td>
+                                <td><strong>ALT/Option + DRAG</strong></td>
+                                <td>Allows drag events to pass through node textareas.</td>
                             </tr>
                             <tr>
                                 <td><strong>ALT/Option + DOUBLE CLICK</strong></td>
                                 <td>Creates an ai chat node</td>
                             </tr>
                             <tr>
-                                <td><strong>DOUBLE CLICK</strong></td>
-                                <td>'Anchor' a window in place.</td>
-                            </tr>
-                            <tr>
                                 <td><strong>SHIFT + SCROLL</strong></td>
                                 <td>Resize a window.</td>
+                            </tr>
+                            <tr>
+                                <td><strong>CTRL + Click</strong></td>
+                                <td>Selects multiple nodes. Allows for multiple nodes to be re-scaled</td>
                             </tr>
                             <tr>
                                 <td>
