Update Selected Node UI
-Change key from ctrl to ctrl plus shift (if nodeMode is 1)
-change background color so text is readable.

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                                 <td>Resize a window.</td>
                             </tr>
                             <tr>
-                                <td><strong>CTRL + Click</strong></td>
+                                <td><strong>CTRL + Shift + Click</strong></td>
                                 <td>Selects multiple nodes. Allows for multiple nodes to be re-scaled</td>
                             </tr>
                             <tr>
