Update Selection UI

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
   <script type="module" crossorigin src="./assets/index.5bff41e7.js"></script>
-  <link rel="stylesheet" href="./assets/index.d46d83bd.css">
+  <link rel="stylesheet" href="./assets/index.58454a02.css">
 </head>
 
 <body id="body">
@@ -359,7 +359,7 @@
                                 <td>Resize a window.</td>
                             </tr>
                             <tr>
-                                <td><strong>CTRL + Click</strong></td>
+                                <td><strong>CTRL + Shift + Click</strong></td>
                                 <td>Selects multiple nodes. Allows for multiple nodes to be re-scaled</td>
                             </tr>
                             <tr>
