refactor/ fix tag changes

--- a/index.html
+++ b/index.html
@@ -699,26 +699,26 @@
         }
     </script>
 
-    <script src="js/dropdown_v1_0_3.js"></script>
-    <script src="js/mandelbrot_v1_0_1.js"></script>
-    <script src="js/zettelkasten_v1.js"></script>
+    <script src="js/dropdown/dropdown_v2.js"></script>
+    <script src="js/mandelbrot/mandelbrot_v1_0_1.js"></script>
+    <script src="js/zettelkasten/zettelkasten_v2.js"></script>
 
     <script defer type="module" src="./embeddings.js"></script>
 
 
-    <script src="js/interface_v1_0_2.js"></script>
+    <script src="js/interface/interface_v2.js"></script>
     <script src="js/editor/editornode.js"></script>
 
     
 
-    <script src="js/ainodes_v1_0_2.js"></script>
-    <script src="js/ai_v1_0_4.js"></script>
+    <script src="js/ainodes/ainodes_v2.js"></script>
+    <script src="js/ai/ai_v2.js"></script>
 
     <!--<script src="js/aicursor.js"></script>-->
 
-    <script src="js/searchapi_v1_0_2.js"></script>
-    <script src="js/createnodes.js"></script>
-    <script src="js/record_v1.js"></script>
+    <script src="js/searchapi/searchapi_v2.js"></script>
+    <script src="js/createnodes/createnodes_v2.js"></script>
+    <script src="js/record/record_v1.js"></script>
 
 </body>
 
