--- a/js/nodes/editor/editor3.html
+++ b/js/nodes/editor/editor3.html
@@ -24,25 +24,26 @@
         }
 
         body {
-            background-color: #1f1f21;
+            background-color: transparent;
             margin: 0;
             padding: 0px;
             display: flex;
             flex-direction: column;
             align-items: center;
+            overflow: hidden;
         }
 
         #editor-wrapper {
             box-sizing: border-box;
             display: flex;
             justify-content: space-between;
-            height: 45vh;
-            width: calc(100% - 20px); /* 10px margin on left and right side */
-            max-width: 1200px;
-            margin-bottom: 0px;
-            margin-left: 10px; /* Left margin */
-            resize: vertical; /* Allows vertical resizing */
+            height: 95vh;
+            width: 96%; /* 10px margin on left and right side */
+            max-width: 100%;
+            margin-top: 10px;
+            margin-left: 15px; /* Left margin */
             overflow: hidden; /* Contains the children */
+            resize:none;
         }
 
         .draggable-bar {
@@ -61,7 +62,6 @@
         #vertical-resize-handle {
             height: 5px;
             width: 100%;
-            cursor: ns-resize;
             background-color: #262737; /* You can style this to match your theme */
         }
 
@@ -72,7 +72,7 @@
         .editor-container {
             height: 100%; /* Take full height of parent */
             margin: 0px 0px;
-            background-color: #222226;
+            background-color: transparent;
             padding: 0px;
             position: relative; /* Ensuring the child takes this height */
             flex: none; /* Ensure equal space division */
@@ -87,6 +87,7 @@
             display: inline;
             margin: 0;
             line-height: 30px;
+            user-select: none;
         }
 
         .CodeMirror {
@@ -95,14 +96,18 @@
             width: 100%;
             position: absolute; /* Take full height of parent */
             bottom: 0; /* Align to the bottom of the container */
-            overflow: hidden; /* Hide scrollbars */
+            overflow-x: hidden; /* Hide horizontal scrollbar */
         }
 
-        .CodeMirror-simplescroll-horizontal, .CodeMirror-simplescroll-vertical {
+        .CodeMirror-simplescroll-horizontal {
+            display: none !important; /* Hide horizontal scrollbar */
+        }
+
+        .CodeMirror-simplescroll-vertical {
             background: #222226 !important;
         }
 
-            .CodeMirror-simplescroll-horizontal div, .CodeMirror-simplescroll-vertical div {
+            .CodeMirror-simplescroll-vertical div {
                 background: #3f3f3f !important;
                 border: 1px solid #555555;
                 width: 6px !important;
@@ -112,39 +117,9 @@
             background: #555 !important;
         }
 
-            .CodeMirror-simplescroll-scrollbar div:hover {
-                background: #555 !important;
-            }
         .CodeMirror-scrollbar-filler, .CodeMirror-gutter-filler {
             background-color: #222226;
         }
-
-        .custom-scrollbar::-webkit-scrollbar {
-            width: 10px;
-            height: 10px;
-        }
-
-        .custom-scrollbar::-webkit-scrollbar-thumb {
-            background: #3f3f3f;
-        }
-
-            .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-                background: #555;
-            }
-
-        .custom-scrollbar::-webkit-scrollbar-corner {
-            background: transparent;
-            border: none;
-        }
-
-        .custom-scrollbar {
-            scrollbar-width: thin;
-            scrollbar-color: #888 transparent;
-        }
-
-            .custom-scrollbar:hover {
-                scrollbar-color: #555 transparent;
-            }
 
         .no-select {
             user-select: none;
@@ -155,7 +130,7 @@
 </head>
 <body>
     <div id="editor-container-wrapper" class="editorcontainer">
-        <div id="editor-wrapper" class="custom-scrollbar">
+        <div id="editor-wrapper">
             <div class="editor-container">
                 <div class="editor-label">html</div>
                 <div id="htmlEditor"></div>
@@ -173,7 +148,7 @@
         </div>
         <div id="vertical-resize-handle"></div>
     </div>
-        <script>
+    <script>
             var htmlEditor = CodeMirror(document.getElementById('htmlEditor'), {
                 mode: 'htmlmixed', theme: 'dracula', lineNumbers: true, lineWrapping: false, scrollbarStyle: 'simple'
             });
@@ -192,28 +167,6 @@
 
             window.requestAnimationFrame(refreshEditors);
 
-            const customScrollbarStyles = `
-    <style>
-        body::-webkit-scrollbar {
-            width: 10px;
-            height: 10px;
-        }
-        body::-webkit-scrollbar-thumb {
-            background: #3f3f3f;
-        }
-        body::-webkit-scrollbar-thumb:hover {
-            background: #555;
-        }
-        body {
-            scrollbar-width: thin;
-            scrollbar-color: #888 transparent;
-        }
-        body:hover {
-            scrollbar-color: #555 transparent;
-        }
-    </style>
-`;
-
             const draggableBars = document.querySelectorAll('.draggable-bar');
             const editorContainers = document.querySelectorAll('.editor-container');
             const draggableBarWidths = Array.from(draggableBars).reduce((total, bar) => total + bar.offsetWidth, 0);
@@ -224,29 +177,47 @@
             let initialWidths;
             let initialX;
 
+        function onMouseMoveLeft(e) {
+            const dx = e.clientX - initialX;
+            const totalWidth = editorContainers[0].parentElement.offsetWidth;
+            let newHtmlWidth = Math.min(totalWidth - 20, initialWidths.htmlWidth + dx);
+            let newCssWidth = totalWidth - newHtmlWidth - initialWidths.jsWidth;
+            let newJsWidth = initialWidths.jsWidth;
 
-            function onMouseMoveLeft(e) {
-                const dx = e.clientX - initialX;
-                const newHtmlWidth = initialWidths.htmlWidth + dx;
-                const newCssWidth = initialWidths.cssWidth - dx;
-
-                if (newHtmlWidth > 10 && newCssWidth > 10) {
-                    editorContainers[0].style.width = newHtmlWidth + 'px';
-                    editorContainers[1].style.width = newCssWidth + 'px';
-                }
+            if (newHtmlWidth <= 10) {
+                newHtmlWidth = 10;
             }
 
-            function onMouseMoveRight(e) {
-                const dx = e.clientX - initialX;
-                const newJsWidth = initialWidths.jsWidth - dx;
-                const newCssWidth = initialWidths.cssWidth + dx;
-
-                if (newJsWidth > 10 && newCssWidth > 10) {
-                    editorContainers[2].style.width = newJsWidth + 'px';
-                    editorContainers[1].style.width = newCssWidth + 'px';
-                }
+            if (newCssWidth <= 10) {
+                newCssWidth = 10;
+                newJsWidth = totalWidth - newHtmlWidth - newCssWidth;
             }
 
+            editorContainers[0].style.width = newHtmlWidth + 'px';
+            editorContainers[1].style.width = newCssWidth + 'px';
+            editorContainers[2].style.width = newJsWidth + 'px';
+        }
+
+        function onMouseMoveRight(e) {
+            const dx = e.clientX - initialX;
+            const totalWidth = editorContainers[0].parentElement.offsetWidth;
+            let newJsWidth = Math.min(totalWidth - 20, initialWidths.jsWidth - dx);
+            let newCssWidth = totalWidth - newJsWidth - initialWidths.htmlWidth;
+            let newHtmlWidth = initialWidths.htmlWidth;
+
+            if (newJsWidth <= 10) {
+                newJsWidth = 10;
+            }
+
+            if (newCssWidth <= 10) {
+                newCssWidth = 10;
+                newHtmlWidth = totalWidth - newCssWidth - newJsWidth;
+            }
+
+            editorContainers[0].style.width = newHtmlWidth + 'px';
+            editorContainers[1].style.width = newCssWidth + 'px';
+            editorContainers[2].style.width = newJsWidth + 'px';
+        }
             function onMouseDown(e) {
                 initialX = e.clientX;
                 initialWidths = {
@@ -272,46 +243,47 @@
                 document.removeEventListener('mouseup', onMouseUp);
             }
 
-            draggableBars.forEach(bar => bar.addEventListener('mousedown', onMouseDown));
+        draggableBars.forEach(bar => bar.addEventListener('mousedown', onMouseDown));
 
-            // Function to update editor widths
-            function updateEditorWidth() {
-                const editorWrapperWidth = editorContainers[0].parentElement.offsetWidth;
-                const newWidth = (editorWrapperWidth - draggableBarWidths) / 3;
+        // Function to recalculate draggable bar widths when resizing
+        function updateDraggableBarWidths() {
+            return Array.from(draggableBars).reduce((total, bar) => total + bar.offsetWidth, 0);
+        }
+
+        // Initialize isResized flag to false
+        let isResized = false;
+
+        // Function to update editor widths
+        function updateEditorWidth() {
+            const editorWrapperWidth = editorContainers[0].parentElement.offsetWidth;
+            const newDraggableBarWidths = updateDraggableBarWidths(); // Update the widths of draggable bars
+            const totalCurrentWidths = Array.from(editorContainers).reduce((total, el) => total + el.offsetWidth, 0);
+            const availableWidth = editorWrapperWidth - newDraggableBarWidths;
+
+            if (!isResized) {
+                // First-time call: Initialize all editors to a uniform width
+                const newWidth = availableWidth / 3;
                 editorContainers.forEach(container => container.style.width = newWidth + 'px');
-                refreshEditors();
+                isResized = true;  // Set the flag to true after the first invocation
+            } else {
+                // Subsequent calls: Proportionally adjust the width of each editor
+                const scalingFactor = availableWidth / totalCurrentWidths;
+                editorContainers.forEach(container => {
+                    const newWidth = container.offsetWidth * scalingFactor;
+                    container.style.width = newWidth + 'px';
+                });
             }
+
+            refreshEditors(); // Refresh the editors
+        }
+
+        // Event listener to update editor widths on window resize
+        window.addEventListener('resize', updateEditorWidth);
 
             // Initial call to set the size
             updateEditorWidth();
 
-            var verticalResizeHandle = document.getElementById('vertical-resize-handle');
-            var editorWrapper = document.getElementById('editor-wrapper');
-            var startY;
-            var startHeight;
-
-            function onVerticalDragStart(e) {
-                startY = e.clientY;
-                startHeight = editorWrapper.offsetHeight;
-                document.body.classList.add('vertical-dragging');
-                document.addEventListener('mousemove', onVerticalDragMove);
-                document.addEventListener('mouseup', onVerticalDragEnd);
-            }
-
-            function onVerticalDragMove(e) {
-                var dy = e.clientY - startY;
-                var newHeight = startHeight + dy;
-                editorWrapper.style.height = newHeight + 'px';
-                refreshEditors(); // Refresh the editors to update their size
-            }
-
-            function onVerticalDragEnd() {
-                document.body.classList.remove('vertical-dragging');
-                document.removeEventListener('mousemove', onVerticalDragMove);
-                document.removeEventListener('mouseup', onVerticalDragEnd);
-            }
-
-            verticalResizeHandle.addEventListener('mousedown', onVerticalDragStart);
-        </script>
+          
+    </script>
 </body>
 </html>
